...
    }
}

// MARK: - UI Configuration
extension HomeView: HomeViewInterface {
    func prepare() {
        title = "OMDB Movies"
        
        view.addSubViews(collectionView, noMovieLabel, activityIndicator)
        
        delegates()
        const()
        
        navigationItem.searchController = searchController
        
        searchController.searchBar.searchTextField.backgroundColor = .white
        searchController.searchBar.searchTextField.textColor = .black
        searchController.searchBar.placeholder = "Search Movie / Series / Episode"
        searchController.searchBar.text = baseSearchText
        
        lastSearchText = baseSearchText
        
        view.backgroundColor = .black
        collectionView.backgroundColor = .clear
...
